# four-russians

./: .gitignore  CMakeLists.txt  README.md
input/: war_and_peace.txt
src/: benchmark.cpp  example.cpp  four_russians.h  test.cpp
